# Flurer

./: .gitignore  AGENTS.md  DESIGN.md  README.md  commit_msg.txt  handoff.md  index.html  package.json
.claude/: launch.json
.claude/skills/flurer-conventions/: SKILL.md
.commandcode/design/: checkup-report.html  checkup-report.md  review-report.html  review-report.md
.commandcode/taste/: taste.md
.github/workflows/: build.yml  release.yml
plugins/git/src/: git.ts
plugins/graph/: package-lock.json  package.json  plugin.json  vite.config.ts
plugins/graph/src/: ContextMenu.tsx  GraphView.tsx  graphTree.ts  icons.tsx  (+3 more)
src/: App.css  App.tsx  theme.css
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  git-plugin.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  progress.rs  updater.rs
src-tauri/src/configs/: mod.rs
src-tauri/src/disks/: mod.rs
src-tauri/src/fs/: mod.rs  ops.rs
src-tauri/src/helpers/: settings.rs
src-tauri/src/network/: mod.rs
src-tauri/src/plugins/: git.rs  mod.rs
src-tauri/src/sizecache/: mod.rs
src-tauri/src/state/: mod.rs
src/components/: CommandBar.tsx  ContextMenu.tsx  CustomizationSettings.tsx  ExplorerPathBar.tsx  ExplorerView.tsx  FileList.tsx  FolderTreeNode.tsx  GraphView.tsx  Modal.tsx  PluginMarketplace.tsx  ProgressIndicator.tsx  SettingsPanel.tsx  Sidebar.tsx  TitleBarControls.tsx  TopBar.tsx  UpdatesView.tsx  ViewRail.tsx  WallpaperSettings.tsx  icons.tsx
src/lib/: fs.ts  graph.ts  graphTree.ts  plugins.ts  settings.ts  unsplash.ts  view.ts
(+2 files in other folders)
