[package]
name = "flurer"
version = "0.4.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flurer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.52.3"
http = "1.4.2"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
trash = "5"
dirs = "6.0.0"
wmi = "0.13"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
keyring = "4.1.4"
base64 = "0.22"
url = "2"

[dev-dependencies]
tempfile = "3.27.0"
